--- a/src/main/webapp/WEB-INF/thymeleaf/welcome.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:substituteby="header :: header"></head>
+<head th:substituteby="layout :: header"></head>
 
 
 <body>
@@ -20,7 +20,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<div th:substituteby="footer :: footer"></div>
+<div th:substituteby="layout :: footer"></div>
 
 </div>
 
