Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1277 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:substituteby="layout :: header"></head>
+    <head th:substituteby="layout :: header">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <link rel="stylesheet" href="../../../styles/petclinic.css" type="text/css"/>
+        <title>PetClinic :: a Spring Framework demonstration</title>  
+    </head>
     <body>
         <div id="main">
             <h2 th:text="${owner.new} ? 'New Owner:' : 'Owner:'">New Owner:</h2>
@@ -55,7 +59,13 @@
                     </tr>
               </table>
             </form>
-            <div th:substituteby="layout :: footer"></div>
+            <table th:substituteby="layout :: footer" class="footer">
+                <tr>
+                    <td><a href="welcome.html">Home</a></td>
+                    <td align="right"><img src="../../../images/springsource-logo.png" 
+                        alt="Sponsored by SpringSource"></img></td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
