--- a/src/main/webapp/WEB-INF/thymeleaf/owners/search.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/search.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:substituteby="layout :: header"></head>
+    <head th:substituteby="layout :: header">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <link rel="stylesheet" href="../../../styles/petclinic.css" type="text/css"/>
+        <title>PetClinic :: a Spring Framework demonstration</title>  
+    </head>
     <body>
         <div id="main">
             <h2>Find Owners:</h2>
@@ -22,7 +26,13 @@
             </form>
             <br/>
             <a th:href="@{/owners/new}" href="form.html">Add Owner</a>
-            <div th:substituteby="layout :: footer"></div>
+            <table th:substituteby="layout :: footer" class="footer">
+                <tr>
+                    <td><a href="welcome.html">Home</a></td>
+                    <td align="right"><img src="../../../images/springsource-logo.png" 
+                        alt="Sponsored by SpringSource"></img></td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
