Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1306 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
@@ -61,7 +61,7 @@
             </form>
             <table th:substituteby="layout :: footer" class="footer">
                 <tr>
-                    <td><a href="welcome.html">Home</a></td>
+                    <td><a href="../welcome.html">Home</a></td>
                     <td align="right"><img src="../../../images/springsource-logo.png" 
                         alt="Sponsored by SpringSource"></img></td>
                 </tr>
