--- a/src/main/webapp/WEB-INF/thymeleaf/owners/list.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/list.html
@@ -46,7 +46,7 @@
             </table>
             <table th:substituteby="layout :: footer" class="footer">
                 <tr>
-                    <td><a href="welcome.html">Home</a></td>
+                    <td><a href="../welcome.html">Home</a></td>
                     <td align="right"><img src="../../../images/springsource-logo.png" 
                         alt="Sponsored by SpringSource"></img></td>
                 </tr>
