--- a/src/main/webapp/WEB-INF/thymeleaf/owners/search.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/search.html
@@ -28,7 +28,7 @@
             <a th:href="@{/owners/new}" href="form.html">Add Owner</a>
             <table th:substituteby="layout :: footer" class="footer">
                 <tr>
-                    <td><a href="welcome.html">Home</a></td>
+                    <td><a href="../welcome.html">Home</a></td>
                     <td align="right"><img src="../../../images/springsource-logo.png" 
                         alt="Sponsored by SpringSource"></img></td>
                 </tr>
