--- a/src/main/webapp/WEB-INF/thymeleaf/owners/show.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/show.html
@@ -91,7 +91,7 @@
             </div>
             <table th:substituteby="layout :: footer" class="footer">
                 <tr>
-                    <td><a href="welcome.html">Home</a></td>
+                    <td><a href="../welcome.html">Home</a></td>
                     <td align="right"><img src="../../../images/springsource-logo.png" 
                         alt="Sponsored by SpringSource"></img></td>
                 </tr>
