Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1312 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
@@ -48,7 +48,8 @@
                             Telephone: <span th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}" 
                                 class="errors"></span>
                             <br/>
-                            <input type="text" th:field="*{telephone}" size="20" maxlength="20"/>
+                            <input type="tel" th:field="*{telephone}" size="20" maxlength="20"
+                                pattern="[0-9]*"/>
                         </th>
                     </tr>
                     <tr>
