Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1334 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/list.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/list.html
@@ -39,7 +39,7 @@
                     <td>333-333-333</td>
                     <td>
                         <span>Roger</span>
-                        <br/>
+                        &nbsp;
                         <span>Peggy</span>
                     </td>
                 </tr>
