Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1337 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/layout.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/layout.html
@@ -23,7 +23,7 @@
             <table class="footer" th:fragment="footer">
                 <tr>
                   <td><a th:href="@{/}" href="welcome.html">Home</a></td>
-                  <td align="right"><img th:src="@{/static/images/springsource-logo.png}" src="../../images/springsource-logo.png" 
+                  <td style="float:right"><img th:src="@{/static/images/springsource-logo.png}" src="../../images/springsource-logo.png" 
                     alt="Sponsored by SpringSource"></img></td>
                 </tr>
             </table>
