--- a/src/main/webapp/WEB-INF/thymeleaf/pets/form.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/pets/form.html
@@ -54,7 +54,7 @@
             <table th:substituteby="layout :: footer" class="footer">
                 <tr>
                     <td><a href="../welcome.html">Home</a></td>
-                    <td align="right"><img src="../../../images/springsource-logo.png" 
+                    <td style="float: right;"><img src="../../../images/springsource-logo.png" 
                         alt="Sponsored by SpringSource"></img></td>
                 </tr>
             </table>
