Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1339 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/layout.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/layout.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <!-- 
-    - [THYMELEAF] This file replaces header and footer files
-    - Doctype, head and body added as this file was just a piece of HTML not a valid 
-    - HTML file in the original spring mvc petclinic application
-    - Now, we can open it in a browser 
+    - [THYMELEAF] This file replaces files header.jsp and footer.jsp
+    - DOCTYPE, head and body added as this file was just a fragment of HTML and not a valid 
+      HTML file in the original Spring MVC petclinic application
 -->
 
     <head th:fragment="header">
