--- a/src/main/webapp/WEB-INF/thymeleaf/pets/visitForm.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/pets/visitForm.html
@@ -39,7 +39,7 @@
 					    </td>
 					</tr>
                     <tr>
-                        <th valign="top">
+                        <th style="vertical-align: top;" >
                             Description:
                             <br/><span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="errors">error</span>
                         </th>
