Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1341 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/form.html
@@ -9,8 +9,7 @@
         <div id="main">
             <h2 th:text="${owner.new} ? 'New Owner:' : 'Owner:'">New Owner:</h2>
             <form th:object="${owner}" action="show.html"
-                th:action="@{${#httpServletRequest.servletPath + '?' + #httpServletRequest.queryString}}" 
-                th:method="${owner.new} ? 'post' : 'put'" >
+                th:action="@{#}" th:method="${owner.new} ? 'post' : 'put'" >
                 <table>
                     <tr>
                         <th>
